//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Usuario {
  id String [pk]
  nome String [not null]
  email String [unique, not null]
  telefone String [unique, not null]
  senha String [not null]
  cep String [not null]
  estado String [not null]
  cidade String [not null]
  foto_perfil String
  livro Livro [not null]
  solicitacao Solicitacao [not null]
  processo_de_troca ProcessoDeTroca [not null]
  alerta Alerta [not null]
  avaliacao Avaliacao [not null]
  generosFavoritos GeneroUsuario [not null]
}

Table Livro {
  id String [pk]
  isbn String [not null]
  nome String [not null]
  sinopse String
  autor String[] [not null]
  dono_publicacao Usuario [not null]
  usuario_id String [not null]
  edicao Int [not null, default: 1]
  idioma String [not null]
  pode_buscar Boolean [not null, default: false]
  quer_receber Boolean [not null, default: true]
  capa String [not null]
  imagens String[] [not null]
  genero_livro GeneroLivro [not null]
  estado Estado [not null]
  estado_id String [not null]
  latitude String [not null]
  longitude String [not null]
  solicitacao Solicitacao [not null]
  processo_de_troca ProcessoDeTroca [not null]
}

Table GeneroLivro {
  livro Livro [not null]
  livro_id String [not null]
  genero Genero [not null]
  genero_id String [not null]

  indexes {
    (livro_id, genero_id) [pk]
  }
}

Table GeneroUsuario {
  usuario Usuario [not null]
  usuario_id String [not null]
  genero Genero [not null]
  genero_id String [not null]

  indexes {
    (usuario_id, genero_id) [pk]
  }
}

Table Genero {
  id String [pk]
  nome String [not null]
  generoLivro GeneroLivro [not null]
  GeneroUsuario GeneroUsuario [not null]
}

Table Estado {
  id String [pk]
  nome String [not null]
  livros Livro [not null]
}

Table Solicitacao {
  id String [pk]
  usuario_solicitante Usuario [not null]
  usuario_solicitante_id String [not null]
  livro Livro [not null]
  livro_id String [not null]
  livro_oferecido_id String [not null]
  status String [not null]

  indexes {
    (usuario_solicitante_id, livro_id) [unique]
  }
}

Table ProcessoDeTroca {
  id String [pk]
  usuario_solicitante Usuario [not null]
  usuario_solicitante_id String [not null]
  livro Livro [not null]
  livro_id String [not null]
  livro_oferecido_id String [not null]
  status String [not null]
}

Table Alerta {
  id String [pk]
  nome_livro String [not null]
  usuario Usuario [not null]
  usuario_id String [not null]
  filtrado_por_localizacao Boolean [not null, default: false]
  filtrado_por_envio Boolean [not null, default: false]

  indexes {
    (usuario_id, nome_livro) [unique]
  }
}

Table Avaliacao {
  id String [pk]
  usuario_avaliador_id String [not null]
  nota Float [not null]
  comentario String [not null]
  usuario_avaliado Usuario [not null]
  usuario_avaliado_id String [not null]
}

Ref: Livro.usuario_id > Usuario.id

Ref: Livro.estado_id > Estado.id

Ref: GeneroLivro.livro_id > Livro.id

Ref: GeneroLivro.genero_id > Genero.id

Ref: GeneroUsuario.usuario_id > Usuario.id

Ref: GeneroUsuario.genero_id > Genero.id

Ref: Solicitacao.usuario_solicitante_id > Usuario.id

Ref: Solicitacao.livro_id > Livro.id

Ref: ProcessoDeTroca.usuario_solicitante_id > Usuario.id

Ref: ProcessoDeTroca.livro_id > Livro.id

Ref: Alerta.usuario_id > Usuario.id

Ref: Avaliacao.usuario_avaliado_id > Usuario.id